--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>calendar todo</title>
+    <title>Todomate</title>
   </head>
   <body>
     <div class="main">
@@ -29,7 +29,7 @@
                 class="input-box"
               />
               <button type="button" id="input-data" class="input-data">
-                INPUT
+                Add
               </button>
               <div id="input-list" class="input-list"></div>
             </div>
@@ -59,6 +59,9 @@
             </thead>
             <tbody id="calendar-body" class="calendar-body"></tbody>
           </table>
+        </div>
+        <div class="content-right  content-last">
+          
         </div>
       </div>
     </div>
