--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <title>Todomate</title>
+    <title>Todo mate</title>
   </head>
   <body>
     <div class="main">
@@ -61,7 +65,21 @@
           </table>
         </div>
         <div class="content-right  content-last">
-          
+          <div class="todo-wrap">
+            <div class="todo-title">Todo List</div>
+            <div class="input-wrap">
+              <input
+                type="text"
+                placeholder="please write here!!"
+                id="input-box"
+                class="input-box"
+              />
+              <button type="button" id="input-data" class="input-data">
+                Add
+              </button>
+              <div id="input-list" class="input-list"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
