--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/stress.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -61,7 +62,7 @@
               <button type="button" id="input-data" class="input-data">
                 Add
               </button>
-              <div id="input-list" class="input-list"></div>
+              <div id="input-list" class="input-list" z-index='1'></div>
             </div>
           </div>
         </div>
