--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/stress.css" />
+    <link rel="stylesheet" href="./styles/stopwatch.css" />
+    
+
+    <!--stopwatch-->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./app/stopwatch.js"></script>
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -22,6 +30,16 @@
           <div class="main-wrap">
             <div id="main-day" class="main-day"></div>
             <div id="main-date" class="main-date"></div>
+          </div>
+          <div id='box' class="box">
+            <div id='timerBox' class="timerBox">
+              <div id="time" class="time">00:00:00</div>
+            </div>
+            <div class="btnBox">
+              <i id="startbtn" class="fa fa-play" aria-hidden="true"></i>
+              <i id="pausebtn" class="fa fa-pause" aria-hidden="true"></i>
+              <i id="stopbtn" class="fa fa-stop" aria-hidden="true"></i>
+            </div>
           </div>
         </div>
         <div class="content-right">
