왼쪽 날짜 표시 배경 시간에 따라 변경

--- a/index.html
+++ b/index.html
@@ -88,4 +88,5 @@
   </body>
   <script type="text/javascript" src="./app/index.js"></script>
   <script type="text/javascript" src="./app/stopwatch.js"></script>
+  <script type="text/javascript" src="./app/leftBgSky.js"></script>
 </html>
